syntax = "proto3";

package user;
option go_package = "github.com/Butternut01/ecommerce-platform/user-service/proto";

service UserService {
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
    rpc AuthenticateUser (AuthenticateUserRequest) returns (AuthenticateUserResponse);
}

message RegisterUserRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message RegisterUserResponse {
    string user_id = 1;
    string message = 2;
}

message AuthenticateUserRequest {
    string username = 1;
    string password = 2;
}

message AuthenticateUserResponse {
    string token = 1;
    string message = 2;
}