package handlers

import (
    "context"
    "go.mongodb.org/mongo-driver/mongo"
    pb "github.com/Butternut01/ecommerce-platform/user-service/proto"
)

type UserService struct {
    pb.UnimplementedUserServiceServer
    db *mongo.Client
}

func NewUserService(client *mongo.Client) pb.UserServiceServer {
    return &UserService{
        db: client,
    }
}

func (s *UserService) RegisterUser(ctx context.Context, req *pb.RegisterUserRequest) (*pb.RegisterUserResponse, error) {
    // Implementation for user registration
    // TODO: Add MongoDB operations here
    return &pb.RegisterUserResponse{
        UserId: "test-user-id",
        Message: "User registered successfully",
    }, nil
}

func (s *UserService) AuthenticateUser(ctx context.Context, req *pb.AuthenticateUserRequest) (*pb.AuthenticateUserResponse, error) {
    // Implementation for user authentication
    // TODO: Add MongoDB operations here
    return &pb.AuthenticateUserResponse{
        Token: "test-token",
        Message: "User authenticated successfully",
    }, nil
}